--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="app"></div>
 
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 
 </html>
