--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Naykel Vite App</title>
+    <title>Vite Starter - Naykel</title>
 </head>
 
 <body>
-
-
-
     <div id="app"></div>
-
     <script type="module" src="main.js"></script>
 </body>
 
